--- a/src/styles/authpages.css
+++ b/src/styles/authpages.css
@@ -1,20 +1,23 @@
 .signup-container {
-  width: 50%;
-  height: 60%;
+  width: 40%;
+  height: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(251, 241, 241);
+  background-color:rgb(6, 0, 69);
   border-radius: 10px;
+  color: white;
 }
+
 .signup-card {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: rgb(0, 0, 0);
 }
 .signup {
   display: flex;
@@ -22,11 +25,13 @@
   align-items: center;
   justify-content: center;
 }
-.signup h1 {
-  margin-bottom: 20px;
+.signup-container h1 {
+  font-size: 2rem;
+  color: white;
 }
 .signup input {
-  width: 90%;
+  background-color: rgb(251, 241, 241);
+  width: 350px;
   padding: 10px;
   margin: 10px;
   border-radius: 5px;
@@ -40,7 +45,7 @@
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: rgb(210, 145, 188);
+  background-color: rgb(48, 113, 255);
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -52,7 +57,7 @@
   border-radius: 5px;
   border: none;
   outline: none;
-  background-color: rgb(210, 145, 188);
+  background-color: rgb(48, 113, 255);
   color: white;
   font-weight: bold;
   cursor: pointer;
@@ -61,18 +66,19 @@
   background-color: rgb(251, 241, 241);
   border: none;
   padding: 10px;
-  margin: 10px;
   cursor: pointer;
   color: black;
+  width: 100px;
 }
 
 .pat-doc button.active {
-  background-color: rgb(210, 145, 188);
+  background-color: rgb(48, 113, 255);
   color: black;
 }
 .pat-doc {
   display: flex;
   justify-content: space-between;
+  margin-top: 15px;
 }
 
 .OTP input {
